--- a/src/components/page/todo.module.css
+++ b/src/components/page/todo.module.css
@@ -19,3 +19,45 @@
   align-items: center;
   width: 45%;
 }
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style-type: none;
+  padding: 0;
+}
+
+.filterContainer {
+  display: flex;
+  gap: 10px;
+}
+
+  .scroll {
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    width: 100%;
+    box-sizing: border-box;
+    max-height: calc(100vh - 611px);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 8px;
+  background-color: #143861;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #843465;
+  border-radius: 9em;
+  box-shadow: inset 1px 1px 10px #f3faf7;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #253861;
+}
