--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@import url(./assets/normalize.css);
+@import url(./assets/fonts/fonts.css);
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Oswald', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1920px;
+  min-width: 320px;
 }
 
 code {
